SGD8-2526: Fix overflow on timeslot

--- a/components/31-molecules/accordion/_accordion.scss
+++ b/components/31-molecules/accordion/_accordion.scss
@@ -26,7 +26,6 @@
 
   .accordion--content {
     transition: max-height .5s ease-in-out;
-    overflow: hidden;
 
     p {
       line-height: 1.75;
